[package]
name = "cobbler"
version = "0.1.0"
authors = ["Laurent Wandrebeck <l.wandrebeck@quelquesmots.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmlrpc = "0.14"
clap-v3 = {version = "3.0.0-beta.1", features = ["yaml"]}
