[package]
name = "rance"
version = "0.1.0"
authors = ["Laurent Wandrebeck <l.wandrebeck@quelquesmots.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-v3 = {version = "3.0.0-beta.1", features = ["yaml"]}
config = "0.10"
pyo3 = "0.9"
serde = "1.0"
serde_derive = "1.0"
sessh = "0.2"
